assets/css/style.scss
---
---

@import "{{site.theme}}";

p {
  font-size: 16px !important;
}

li {
  font-size: 16px !important;
}

h3 {
  color: #e8e8e8 !important;
}

h4 {
  font-size: 17px !important; // Same size as p, but different color. Theme size is too small
}

section {
  padding-bottom: 20px !important; // Theme padding is a little too aggressive for me.
}

.layout-post {
  margin-bottom: 50px;
}

.centered {
  margin-right: auto;
  margin-left: auto;
}

.code-caption {
  margin-top: -10px;
  margin-bottom: 10px;
  text-align: center;
}

.img {
  margin-right: auto;
  margin-left: auto;
  display: block;
}

.img-div {
  text-align: center;
  font-style: italic;

  img {
    margin-right: auto;
    margin-left: auto;
    display: block;
    max-height: 300px;
  }

  max-height: 300px;
  margin-bottom: 30px;
}

.img-div-tall {
  @extend .img-div;
  max-height: 500px;

  img {
    max-height: 500px;
  }
}

.img-div-skyscraper {
  @extend .img-div;
  max-height: 800px;

  img {
    max-height: 800px;
  }
}

.extra-bottom {
  margin-bottom: 60px;
}

.full-width {
  width: 100%;
}

.img-circle {
  border-radius: 50%;
}

.profile-picture-section {
  display: flex;
  align-items: center;
}

.info-container {
  padding-left: 40px;
  font-style: italic;
}

.yt-div {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-bottom: 20px;
}

iframe {
  border: 0;
}

code {
  margin: 0 2px;
  padding: 0;
  font-size: 16px !important;
}

.wrapper, section {
  max-width: 950px !important; // Override theme styling
}

// Mailchimp signup formule default styling
#mc_embed_signup form {
  text-align: center;
  padding: 10px 0 10px 0;
}

.mc-field-group {
  display: inline-block;
}

/* positions input field horizontally */
#mc_embed_signup input.email {
  font-family: "Open Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
  font-size: 15px;
  border: 1px solid #ABB0B2;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  color: #343434;
  background-color: #fff;
  box-sizing: border-box;
  height: 32px;
  padding: 0px 0.4em;
  display: inline-block;
  margin: 0;
  width: 350px;
  vertical-align: top;
}

#mc_embed_signup label {
  display: block;
  font-size: 16px;
  padding-bottom: 10px;
  font-weight: bold;
}

#mc_embed_signup .clear {
  display: inline-block;
}

/* positions button horizontally in line with input */
#mc_embed_signup .button {
  font-size: 13px;
  border: none;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  letter-spacing: .03em;
  color: #fff;
  background-color: #aaa;
  box-sizing: border-box;
  height: 32px;
  line-height: 32px;
  padding: 0 18px;
  display: inline-block;
  margin: 0;
  transition: all 0.23s ease-in-out 0s;
}

#mc_embed_signup .button:hover {
  background-color: #777;
  cursor: pointer;
}

#mc_embed_signup div#mce-responses {
  float: left;
  top: -1.4em;
  padding: 0em .5em 0em .5em;
  overflow: hidden;
  width: 90%;
  margin: 0 5%;
  clear: both;
}

#mc_embed_signup div.response {
  margin: 1em 0;
  padding: 1em .5em .5em 0;
  font-weight: bold;
  float: left;
  top: -1.5em;
  z-index: 1;
  width: 80%;
}

#mc_embed_signup #mce-error-response {
  display: none;
}

#mc_embed_signup #mce-success-response {
  color: #529214;
  display: none;
}

#mc_embed_signup label.error {
  display: block;
  float: none;
  width: auto;
  margin-left: 1.05em;
  text-align: left;
  padding: .5em 0;
}

@media (max-width: 768px) {
  #mc_embed_signup input.email {
    width: 100%;
    margin-bottom: 5px;
  }
  #mc_embed_signup .clear {
    display: block;
    width: 100%
  }
  #mc_embed_signup .button {
    width: 100%;
    margin: 0;
  }
}


// Mailchimp custom styling
#mc_embed_signup {
  clear: left;
  font: 14px Helvetica, Arial, sans-serif;
  width: 100%;

  .button {
    background-color: #777;

    &:hover {
      background-color: #c89200;
    }
  }
}


// Twitter styling


// Author button
.twitter-author-button {
  width: 1.5rem;
  height: 1.5rem;
  vertical-align: text-top;
  display: inline-flex;
  justify-content: center;
  align-items: center;


  position: relative;
  box-sizing: border-box;
  background-color: #1b95e0;
  border-radius: 3px;
  font-weight: 500;
  cursor: pointer;
}

.twitter-author-button a {
  position: relative;
  display: inline-block;
  width: 1.3rem;
  height: 1.3rem;
  background: transparent 0 0 no-repeat;
  background-image: url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2072%2072%22%3E%3Cpath%20fill%3D%22none%22%20d%3D%22M0%200h72v72H0z%22%2F%3E%3Cpath%20class%3D%22icon%22%20fill%3D%22%23fff%22%20d%3D%22M68.812%2015.14c-2.348%201.04-4.87%201.744-7.52%202.06%202.704-1.62%204.78-4.186%205.757-7.243-2.53%201.5-5.33%202.592-8.314%203.176C56.35%2010.59%2052.948%209%2049.182%209c-7.23%200-13.092%205.86-13.092%2013.093%200%201.026.118%202.02.338%202.98C25.543%2024.527%2015.9%2019.318%209.44%2011.396c-1.125%201.936-1.77%204.184-1.77%206.58%200%204.543%202.312%208.552%205.824%2010.9-2.146-.07-4.165-.658-5.93-1.64-.002.056-.002.11-.002.163%200%206.345%204.513%2011.638%2010.504%2012.84-1.1.298-2.256.457-3.45.457-.845%200-1.666-.078-2.464-.23%201.667%205.2%206.5%208.985%2012.23%209.09-4.482%203.51-10.13%205.605-16.26%205.605-1.055%200-2.096-.06-3.122-.184%205.794%203.717%2012.676%205.882%2020.067%205.882%2024.083%200%2037.25-19.95%2037.25-37.25%200-.565-.013-1.133-.038-1.693%202.558-1.847%204.778-4.15%206.532-6.774z%22%2F%3E%3C%2Fsvg%3E);
}


// Share button
.twitter-label {
  font: 14px/1.5 "OpenSansRegular", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
  color: #fff !important;
  margin-left: 3px;
  white-space: nowrap;
}


.twitter-button {
  width: 75px;
  height: 25px;
  position: relative;
  box-sizing: border-box;
  padding: 1px 8px 2px 6px;
  background-color: #1b95e0;
  border-radius: 3px;
  font-weight: 500;
  cursor: pointer;
}

.twitter-button em {
  position: relative;
  top: 2px;
  bottom: 2px;
  display: inline-block;
  width: 14px;
  height: 14px;
  background: transparent 0 0 no-repeat;
  background-image: url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2072%2072%22%3E%3Cpath%20fill%3D%22none%22%20d%3D%22M0%200h72v72H0z%22%2F%3E%3Cpath%20class%3D%22icon%22%20fill%3D%22%23fff%22%20d%3D%22M68.812%2015.14c-2.348%201.04-4.87%201.744-7.52%202.06%202.704-1.62%204.78-4.186%205.757-7.243-2.53%201.5-5.33%202.592-8.314%203.176C56.35%2010.59%2052.948%209%2049.182%209c-7.23%200-13.092%205.86-13.092%2013.093%200%201.026.118%202.02.338%202.98C25.543%2024.527%2015.9%2019.318%209.44%2011.396c-1.125%201.936-1.77%204.184-1.77%206.58%200%204.543%202.312%208.552%205.824%2010.9-2.146-.07-4.165-.658-5.93-1.64-.002.056-.002.11-.002.163%200%206.345%204.513%2011.638%2010.504%2012.84-1.1.298-2.256.457-3.45.457-.845%200-1.666-.078-2.464-.23%201.667%205.2%206.5%208.985%2012.23%209.09-4.482%203.51-10.13%205.605-16.26%205.605-1.055%200-2.096-.06-3.122-.184%205.794%203.717%2012.676%205.882%2020.067%205.882%2024.083%200%2037.25-19.95%2037.25-37.25%200-.565-.013-1.133-.038-1.693%202.558-1.847%204.778-4.15%206.532-6.774z%22%2F%3E%3C%2Fsvg%3E);
}

// RSS Styling

.rss-feed-link {
  margin-left: 5px;
  vertical-align: text-top;
}

.rss-feed-image {
  max-height: 1.5rem;
}

